--- a/.github/workflows/CodeGuru Pipeline.yml
+++ b/.github/workflows/CodeGuru Pipeline.yml
@@ -32,4 +32,5 @@ jobs:
       if: ${{ github.event_name != 'push' }}
       uses: github/codeql-action/upload-sarif@v2
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         sarif_file: codeguru-results.sarif.json
